config: Enable new bcmdhd driver
config: Changes for new wifi driver:
Switch from WEXT to NL80211
Disable USB RNDIS until it can be forward-ported to new net code

--- a/arch/arm/configs/aries_infuse4g_defconfig
+++ b/arch/arm/configs/aries_infuse4g_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.35.7
-# Mon Apr  9 18:02:14 2012
+# Linux kernel version: 2.6.35.7-I997UCLB3-CL977492
+# Sun Apr 22 14:40:29 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -24,6 +24,7 @@ CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
+# CONFIG_KEPLER_AUDIO_A1026 is not set
 CONFIG_GENERIC_HARDIRQS_NO__DO_IRQ=y
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_VECTORS_BASE=0xffff0000
@@ -109,6 +110,7 @@ CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_EXTRA_PASS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
+CONFIG_SEC_LOG=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
@@ -281,9 +283,8 @@ CONFIG_S3C_GPIO_SPACE=0
 CONFIG_S3C_GPIO_TRACK=y
 # CONFIG_S3C_ADC is not set
 CONFIG_S3C_DEV_HSMMC=y
-# CONFIG_S3C_DEV_HSMMC1 is not set
 CONFIG_S3C_DEV_HSMMC2=y
-# CONFIG_S3C_DEV_HSMMC3 is not set
+CONFIG_S3C_DEV_HSMMC3=y
 CONFIG_S3C_DEV_I2C1=y
 CONFIG_S3C_DEV_I2C2=y
 CONFIG_S3C_DEV_WDT=y
@@ -325,21 +326,24 @@ CONFIG_S5PC110_DEV_ONENAND=y
 # CONFIG_MACH_SMDKC110 is not set
 # CONFIG_MACH_HERRING is not set
 CONFIG_MACH_ARIES=y
-CONFIG_ARIES_EUR=y
-CONFIG_CPU_S5PV210_EVT1=y
 # CONFIG_S5PC110_KEPLER_BOARD is not set
 # CONFIG_S5PC110_T959_BOARD is not set
-# CONFIG_S5PC110_FLEMING_BOARD is not set
 # CONFIG_S5PC110_HAWK_BOARD is not set
 # CONFIG_S5PC110_VIBRANTPLUS_BOARD is not set
+# CONFIG_S5PC110_FLEMING_BOARD is not set
 CONFIG_S5PC110_DEMPSEY_BOARD=y
-# CONFIG_T959_VER_B5 is not set
 # CONFIG_KEPLER_VER_B2 is not set
+# CONFIG_T959_VER_B5 is not set
+# CONFIG_HAWK_VER_B0 is not set
+# CONFIG_VIBRANTPLUS_VER_B0 is not set
+# CONFIG_FLEMING_VER_B0 is not set
+# CONFIG_S5PC110_DEMPSEYR_BOARD is not set
 CONFIG_DEMPSEY_VER_B0=y
-CONFIG_CP_CHIPSET_STE=y
-
 # CONFIG_GPS_CHIPSET_STE_GNS7560 is not set
 CONFIG_GPS_CHIPSET_STE_CG2900=y
+CONFIG_ARIES_EUR=y
+# CONFIG_ARIES_NTT is not set
+# CONFIG_ARIES_LATONA is not set
 CONFIG_S5PV210_SETUP_FB=y
 CONFIG_S5P_ADC=y
 CONFIG_S5PV210_SETUP_FIMC0=y
@@ -347,6 +351,8 @@ CONFIG_S5PV210_SETUP_FIMC1=y
 CONFIG_S5PV210_SETUP_FIMC2=y
 CONFIG_S5PV210_SETUP_CSIS=y
 CONFIG_WIFI_CONTROL_FUNC=y
+CONFIG_DVFS_LIMIT=y
+# CONFIG_CPU_DIDLE is not set
 
 #
 # Processor Type
@@ -465,10 +471,8 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_IDLE=y
-# CONFIG_CPU_DIDLE is not set
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
-CONFIG_DVFS_LIMIT=y
 
 #
 # Floating point emulation
@@ -503,6 +507,7 @@ CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_HAS_EARLYSUSPEND=y
+# CONFIG_SVNET_WHITELIST is not set
 CONFIG_WAKELOCK=y
 CONFIG_WAKELOCK_STAT=y
 CONFIG_USER_WAKELOCK=y
@@ -532,11 +537,16 @@ CONFIG_NET_KEY=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
-CONFIG_IP_MULTIPLE_TABLES=y
+CONFIG_ASK_IP_FIB_HASH=y
+# CONFIG_IP_FIB_TRIE is not set
 CONFIG_IP_FIB_HASH=y
+CONFIG_IP_MULTIPLE_TABLES=y
+# CONFIG_IP_ROUTE_MULTIPATH is not set
+# CONFIG_IP_ROUTE_VERBOSE is not set
 # CONFIG_IP_PNP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE is not set
+# CONFIG_IP_MROUTE is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
 # CONFIG_INET_AH is not set
@@ -837,21 +847,25 @@ CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIUART_LL is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
+CONFIG_BT_HID=m
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
-CONFIG_WEXT_PRIV=y
-# CONFIG_CFG80211 is not set
+CONFIG_CFG80211=y
+CONFIG_NL80211_TESTMODE=y
+# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
+# CONFIG_CFG80211_REG_DEBUG is not set
+CONFIG_CFG80211_DEFAULT_PS=y
+# CONFIG_CFG80211_DEBUGFS is not set
+# CONFIG_CFG80211_INTERNAL_REGDB is not set
+CONFIG_CFG80211_WEXT=y
 CONFIG_WIRELESS_EXT_SYSFS=y
-# CONFIG_LIB80211 is not set
-CONFIG_BT_HID=m
-
-#
-# CFG80211 needs to be enabled for MAC80211
-#
+CONFIG_LIB80211=y
+# CONFIG_LIB80211_DEBUG is not set
+# CONFIG_CFG80211_ALLOW_RECONNECT is not set
+# CONFIG_MAC80211 is not set
 
 #
 # Some wireless drivers require a rate control algorithm
@@ -914,7 +928,7 @@ CONFIG_ANDROID_PMEM_MEMSIZE_PMEM_ADSP=6144
 # CONFIG_KERNEL_DEBUGGER_CORE is not set
 # CONFIG_ISL29003 is not set
 # CONFIG_SENSORS_TSL2550 is not set
-# CONFIG_SENSORS_AK8975 is not set
+CONFIG_SENSORS_AK8975=y
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
@@ -936,7 +950,13 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_EEPROM_93CX6 is not set
 # CONFIG_IWMC3200TOP is not set
 CONFIG_SAMSUNG_MODEMCTL=y
+CONFIG_CP_CHIPSET_STE=y
+CONFIG_VIBETONZ=m
 CONFIG_PN544=y
+CONFIG_J4FS=m
+CONFIG_PARAM=m
+# CONFIG_LEVEL is not set
+CONFIG_STORAGE_DGS=m
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1002,14 +1022,16 @@ CONFIG_IFB=y
 CONFIG_TUN=y
 # CONFIG_VETH is not set
 # CONFIG_NET_ETHERNET is not set
-CONFIG_NETDEV_1000=y
-CONFIG_NETDEV_10000=y
+# CONFIG_NETDEV_1000 is not set
+# CONFIG_NETDEV_10000 is not set
 CONFIG_WLAN=y
-# CONFIG_BROADCOM_WIFI is not set
-CONFIG_BROADCOM_WIFI_4330=m
-CONFIG_BCM4329_FW_PATH="/vendor/firmware/fw_bcm4329.bin"
-CONFIG_BCM4329_NVRAM_PATH="/vendor/firmware/nvram_net.txt"
+# CONFIG_ATH_COMMON is not set
+# CONFIG_BCM4334 is not set
+CONFIG_BCM4330=y
+CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 # CONFIG_HOSTAP is not set
+# CONFIG_IWM is not set
+# CONFIG_LIBERTAS is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1024,7 +1046,6 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPPOE=y
-CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 # CONFIG_SLIP is not set
@@ -1032,6 +1053,7 @@ CONFIG_SLHC=y
 # CONFIG_NETCONSOLE is not set
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
+# CONFIG_KINETO_GAN is not set
 # CONFIG_ISDN is not set
 # CONFIG_PHONE is not set
 
@@ -1073,18 +1095,14 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
+# CONFIG_KEYPAD_MELFAS_TOUCH is not set
 CONFIG_KEYPAD_CYPRESS_TOUCH=y
 CONFIG_KEYPAD_S3C=y
-# CONFIG_S3C_KEYPAD_DEBUG is not set
-CONFIG_KEYPAD_S3C_INT=y
-# CONFIG_KEYPAD_S3C_MSM is not set
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
-# CONFIG_TOUCHSCREEN_QT602240 is not set
-CONFIG_TOUCHSCREEN_MXT224E=y
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879_I2C is not set
 # CONFIG_TOUCHSCREEN_AD7879_SPI is not set
@@ -1110,12 +1128,14 @@ CONFIG_TOUCHSCREEN_MXT224E=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
+# CONFIG_TOUCHSCREEN_QT602240 is not set
+CONFIG_TOUCHSCREEN_MXT224E=y
 CONFIG_INPUT_MISC=y
+CONFIG_GYRO_K3G=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA023 is not set
 # CONFIG_INPUT_BMA222 is not set
 # CONFIG_INPUT_YAS529 is not set
-# CONFIG_INPUT_YAS529_POSITION is not set
 # CONFIG_INPUT_ORIENTATION is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -1131,10 +1151,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_OPTICAL_GP2A is not set
 # CONFIG_OPTICAL_TAOS_TRITON is not set
 CONFIG_OPTICAL_CAPELLA_TRITON=y
-CONFIG_GYRO_K3G=y
-CONFIG_SENSORS_AK8975=y
 CONFIG_SENSORS_K3DH=y
-
 
 #
 # Hardware I/O ports
@@ -1153,7 +1170,7 @@ CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
 # CONFIG_VT_CONSOLE is not set
 CONFIG_HW_CONSOLE=y
-
+# CONFIG_VT_HW_CONSOLE_BINDING is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
 # CONFIG_SERIAL_NONSTANDARD is not set
@@ -1307,7 +1324,6 @@ CONFIG_SSB_POSSIBLE=y
 #
 # CONFIG_SSB is not set
 CONFIG_MFD_SUPPORT=y
-CONFIG_MFD_CG2900=y
 CONFIG_MFD_CORE=y
 # CONFIG_MFD_88PM860X is not set
 # CONFIG_MFD_SM501 is not set
@@ -1322,6 +1338,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_TMIO is not set
 # CONFIG_MFD_T7L66XB is not set
 # CONFIG_MFD_TC6387XB is not set
+CONFIG_MFD_CG2900=y
 # CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_PMIC_ADP5520 is not set
@@ -1390,13 +1407,13 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 # CONFIG_VIDEO_SAA5246A is not set
 # CONFIG_VIDEO_SAA5249 is not set
 # CONFIG_SOC_CAMERA is not set
-CONFIG_VIDEO_M5MO=y
-# CONFIG_VIDEO_S5K6AAFX=y # Subhransu
-CONFIG_VIDEO_SR130PC10=y
 # CONFIG_VIDEO_CE147 is not set
 # CONFIG_VIDEO_S5K5CCGX is not set
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_S5KA3DFX is not set
+CONFIG_VIDEO_M5MO=y
+CONFIG_VIDEO_SR130PC10=y
+# CONFIG_VIDEO_VIBRANTPLUSTELUS is not set
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -1475,17 +1492,17 @@ CONFIG_FB_S3C_NUM_OVLY_WIN=1
 CONFIG_FB_S3C_NUM_BUF_OVLY_WIN=3
 # CONFIG_FB_S3C_VIRTUAL is not set
 # CONFIG_FB_S3C_LTE480WV is not set
-# CONFIG_FB_S3C_HT101HD1 is not set
-# CONFIG_FB_S3C_TL2796 is not set
 CONFIG_FB_S3C_LDI=y
-# CONFIG_FB_S3C_uPD161224 is not set
+# CONFIG_FB_S3C_HT101HD1 is not set
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=3072
-#CONFIG_FB_S3C_TL2796_ACL is not set
+# CONFIG_FB_S3C_uPD161224 is not set
 CONFIG_FB_S3C_MDNIE_TUNINGMODE_FOR_BACKLIGHT=y
+# CONFIG_FB_S3C_TL2796 is not set
 # CONFIG_FB_S3C_LVDS is not set
 # CONFIG_FB_S3C_AMS701KA is not set
 CONFIG_FB_S3C_MDNIE=y
 # CONFIG_FB_S3C_CMC623 is not set
+# CONFIG_VIBRANTPLUSTELUS_BOOT_LOGO is not set
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_TMIO is not set
 # CONFIG_FB_VIRTUAL is not set
@@ -1515,6 +1532,8 @@ CONFIG_BACKLIGHT_PWM=y
 # Console display driver support
 #
 # CONFIG_VGA_CONSOLE is not set
+CONFIG_DUMMY_CONSOLE=y
+# CONFIG_FRAMEBUFFER_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
@@ -1545,7 +1564,6 @@ CONFIG_SND_DRIVERS=y
 CONFIG_SND_ARM=y
 CONFIG_SND_SPI=y
 CONFIG_SND_SOC=y
-CONFIG_SND_S5P_RP=y
 CONFIG_SND_S3C24XX_SOC=y
 CONFIG_SND_S3C_I2SV2_SOC=y
 CONFIG_SND_S3C_SOC_PCM=y
@@ -1555,12 +1573,31 @@ CONFIG_SND_S5P_SOC_WM8994=y
 CONFIG_SND_S5P_WM8994=y
 CONFIG_SND_S5P_WM8994_MASTER=y
 # CONFIG_S5P_INTERNAL_DMA is not set
+CONFIG_ANDROID_BUF_NUM=1
+CONFIG_SND_VOODOO=y
+CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
+CONFIG_SND_VOODOO_HP_LEVEL=47
+CONFIG_SND_VOODOO_RECORD_PRESETS=y
+# CONFIG_SND_VOODOO_FM is not set
+# CONFIG_SND_VOODOO_DEVELOPMENT is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WM_HUBS=y
 CONFIG_SND_SOC_WM8994=y
 # CONFIG_SOUND_PRIME is not set
+CONFIG_SND_S5P_RP=y
+# CONFIG_SND_S5P_RP_DEBUG is not set
 CONFIG_HID_SUPPORT=y
+CONFIG_HID=y
+# CONFIG_HIDRAW is not set
+# CONFIG_HID_PID is not set
+
+#
+# Special HID drivers
+#
+# CONFIG_HID_APPLE is not set
+# CONFIG_HID_MAGICMOUSE is not set
+# CONFIG_HID_WACOM is not set
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_ARCH_HAS_HCD=y
 # CONFIG_USB_ARCH_HAS_OHCI is not set
@@ -1623,10 +1660,7 @@ CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 # CONFIG_USB_ANDROID_MTP is not set
-CONFIG_USB_ANDROID_RNDIS=y
-CONFIG_USB_ANDROID_RNDIS_WCEIS=y
-CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED=y
-# CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
+# CONFIG_USB_ANDROID_RNDIS is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
 # CONFIG_USB_G_MULTI is not set
@@ -1778,18 +1812,6 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_ADIS16255 is not set
 
 #
-# LinuStoreIII Flash Devices (FSR)
-#
-CONFIG_RFS_FSR=m
-CONFIG_RFS_FSR_STL=m
-CONFIG_RFS_STL_DELETE=y
-# CONFIG_RFS_FSR_STL_BENCHMARK is not set
-# CONFIG_FSR_DUAL_VOLUME is not set
-CONFIG_FSR_FLASH_PHYS_ADDR=0xB0000000
-CONFIG_LINUSTOREIII_DEBUG_VERBOSE=0
-CONFIG_LINUSTOREIII_DEBUG=y
-
-#
 # TinyFSR Support for cramfs
 #
 CONFIG_TINY_FSR=y
@@ -1868,28 +1890,6 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
-
-#
-# RFS Filesystem
-#
-CONFIG_RFS_FS=m
-CONFIG_RFS_DEFAULT_IOCHARSET="utf8"
-CONFIG_RFS_FS_PERMISSION=y
-# CONFIG_RFS_FS_XATTR is not set
-CONFIG_RFS_FS_SYNC_ON_CLOSE=y
-CONFIG_RFS_FS_ERASE_SECTOR=y
-CONFIG_RFS_FS_SPECIAL=y
-
-#
-# RFS debugging options
-#
-# CONFIG_RFS_FS_DEBUG is not set
-
-#
-# RFS Core Filesystems
-#
-CONFIG_RFS_FS_CORE_FAT=m
-CONFIG_RFS_FS_FAT_VFAT=y
 # CONFIG_LOGFS is not set
 CONFIG_CRAMFS=y
 # CONFIG_SQUASHFS is not set
@@ -2207,4 +2207,3 @@ CONFIG_TEXTSEARCH_FSM=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_DMA=y
 CONFIG_NLATTR=y
-# CONFIG_KINETO_GAN is not set
