bcmdhd: Bring MAC address handling in line with Galaxy S II
RDWR_MACADDR looks like it's broken - it effectively behaves like
WRITE_MACADDR in the old driver, and the new driver is clearly
broken as it creats .nvmac.info but doesn't write anything to it

Do it like the GSII for now.

Signed-off-by: Andrew Dodd <atd7@cornell.edu>

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -30,7 +30,7 @@ DHDCFLAGS += -DCONFIG_CONTROL_PM -DPOWER_ON_DELAY_4330
 endif
 
 ifeq ($(CONFIG_S5PC110_DEMPSEY_BOARD),y)
-DHDCFLAGS += -DUSE_CID_CHECK -DRDWR_MACADDR
+DHDCFLAGS += -DUSE_CID_CHECK -DWRITE_MACADDR -DU1_MACADDR
 endif
 
 ifeq ($(CONFIG_MACH_U1),y)
