--- a/arch/arm/configs/aries_infuse4g_defconfig
+++ b/arch/arm/configs/aries_infuse4g_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7-I997UCLB3-CL977492
-# Sun Apr 22 14:40:29 2012
+# Sat May 19 01:47:21 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1026,13 +1026,12 @@ CONFIG_TUN=y
 # CONFIG_NETDEV_10000 is not set
 CONFIG_WLAN=y
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCM4334 is not set
-#CONFIG_BCM4330=y
-#CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_DHD_USE_STATIC_BUF=y
+# CONFIG_DHD_USE_SCHED_SCAN is not set
+# CONFIG_DHD_ENABLE_P2P is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
