config: Enable BNEP

--- a/arch/arm/configs/aries_infuse4g_defconfig
+++ b/arch/arm/configs/aries_infuse4g_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7-I997UCLB3-CL977492
-# Sun Apr 22 14:40:29 2012
+# Tue Jun 19 20:08:24 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -834,7 +834,9 @@ CONFIG_BT_L2CAP=y
 CONFIG_BT_SCO=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
-# CONFIG_BT_BNEP is not set
+CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 
 #
@@ -1028,7 +1030,10 @@ CONFIG_WLAN=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4334 is not set
 CONFIG_BCM4330=y
+# CONFIG_BCM43241 is not set
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
+# CONFIG_WLAN_COUNTRY_CODE is not set
+CONFIG_WLAN_REGION_CODE=100
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
