--- a/arch/arm/configs/aries_infuse4g_defconfig
+++ b/arch/arm/configs/aries_infuse4g_defconfig
@@ -86,7 +86,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_RELAY is not set
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="usr/infuse4g_initramfs.list"
+CONFIG_INITRAMFS_SOURCE="source/usr/infuse4g_initramfs.list"
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_RD_GZIP=y
