--- a/drivers/input/keyboard/Makefile
+++ b/drivers/input/keyboard/Makefile
@@ -40,9 +40,5 @@ obj-$(CONFIG_KEYBOARD_XTKBD)		+= xtkbd.o
 obj-$(CONFIG_KEYBOARD_W90P910)		+= w90p910_keypad.o
 obj-$(CONFIG_KEYPAD_MELFAS_TOUCH)                += melfas-touchkey.o
 obj-$(CONFIG_KEYPAD_MELFAS_TOUCH)                += melfas_download.o
-#obj-$(CONFIG_KEYPAD_CYPRESS_TOUCH)      += cypress-touchkey.o
-obj-$(CONFIG_KEYPAD_CYPRESS_TOUCH)                += cypress/cypress-touchkey.o
-obj-$(CONFIG_KEYPAD_CYPRESS_TOUCH)                += cypress/issp_driver_routines.o
-obj-$(CONFIG_KEYPAD_CYPRESS_TOUCH)                += cypress/issp_main.o
-obj-$(CONFIG_KEYPAD_CYPRESS_TOUCH)                += cypress/issp_routines.o
+obj-$(CONFIG_KEYPAD_CYPRESS_TOUCH)                += cypress/
 obj-$(CONFIG_KEYPAD_S3C)                += s3c-keypad.o
